
 787.	[bug]		The DNSSEC tools failed to downcase domain
			names when mapping them into file names.

 786.	[bug]		When DNSSEC signing/verifying data, owner names were
			not properly downcased.

 785.	[bug]		A race condition in the resolver could cause
			an assertion failure. [RT #673, #872, #1048]

 784.	[bug]		nsupdate and other programs would not quit properly
			if some signals were blocked by the caller. [RT #1081]

 783.	[bug]		Following CNAMEs could cause an assertion failure
			when either using an sdb database or under very
			rare conditions.

 782.	[feature]	Implement the serial-query-rate option.

 781.	[func]		Avoid error packet loops by dropping duplicate FORMERR
			responses. [RT #1006]

 780.	[bug]		Error handling code dealing with out of memory or
			other rare errors could lead to assertion failures
			by calling functions on unitialized names. [RT #1065]

 779.	[func]		Added the "minimal-responses" option.

 778.	[bug]		When starting cache cleaning, cleaning_timer_action()
			returned without first pausing the iterator, which
			could cause deadlock. [RT #998]

 777.	[bug]		An empty forwarders list in a zone failed to override
			global forwarders. [RT #995]

 776.	[func]		Improved error reporting in denied messages. [RT #252]

 775.	[placeholder]

 774.	[func]		max-cache-size is implemented.

 773.	[func]		Added isc_rwlock_trylock() to attempt to lock without
			blocking.

 772.	[bug]		Owner names could be incorrectly omitted from cache
			dumps in the presence of negative caching entries.
			[RT #991]

 771.	[cleanup]	TSIG errors related to unsynchronized clocks
			are logged better. [RT #919]

 770.	[func]		Add the "edns yes_or_no" statement to the server
			clause. [RT #524]

 769.	[func]		Improved error reporting when parsing rdata. [RT #740]

 768.	[bug]		The server did not emit an SOA when a CNAME
			or DNAME chain ended in NXDOMAIN in an
			authoritative zone.

 767.	[placeholder]
