@@ -1,7 +1,7 @@
 Copyright (C) 2000, 2001  Internet Software Consortium.
 See COPYRIGHT in the source root or http://isc.org/copyright.html for terms.
 
-$Id: options,v 1.65 2001/03/19 22:34:08 bwelling Exp $
+$Id: options,v 1.66 2001/03/26 21:32:56 bwelling Exp $
 
 This is a summary of the implementation status of the various named.conf
 options in BIND 9.
@@ -123,6 +123,7 @@ options {
   [ additional-from-cache yes_or_no; ]			    Yes*
   [ random-device path_name; ]				    Yes*
   [ minimal-responses yes_or_no; ]			    Yes*
+  [ match-mapped-addresses yes_or_no; ]			    Yes*
 };
 
 acl							    Yes@
